release v0.0.17
Harden scheduling and scripted configuration, preserve compatibility, publish v0.0.17 metadata, and fix the Linux CI Gradle invocation.